<resources>
    <string name="app_name">Neither</string>
    <string name="chooseTopic">Choose a topic:</string>
    <string name="chooseMedia">Or choose a medium</string>
    <string name="topicButton1">Trump for President</string>
    <string name="mediaButton1">Google News</string>
    <string name="topicPrompt">What do you say?</string>
    <string name="posAns">Sure!</string>
    <string name="negAns">Nah..</string>
    <string name="peopleThought">People\'s thoughts</string>
    <string name="yourThought">What do you think?</string>
    <string name="mediaThought">This media\'s thought</string>
    <string name="resultPrompt">People\'s choice on this</string>
    <string name="addStuff">Add..</string>
    <string name="thoughtsEntry">So what is it that you want to say?</string>
    <string name="save">Save</string>
    <string name="showThoughts">Here\'s some people\'s thoughts</string>

    <!--  Menu items -->
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>

    <!--  NetworkActivity -->
    <string name="page_title">Newest StackOverflow questions tagged \'android\'</string>
    <string name="updated">Last updated:</string>
    <string name="lost_connection">Lost connection.</string>
    <string name="wifi_connected">Wi-Fi reconnected.</string>
    <string name="connection_error">Unable to load content. Check your network connection.</string>
    <string name="xml_error">Error parsing XML.</string>
</resources>
